--- a/app/views/partials/complex/506.html
+++ b/app/views/partials/complex/506.html
@@ -1,16 +1,17 @@
-<section class="challenge-container complex-challenge">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-2"></div>
-			<div class="col-xs-8 challenge-body">
-				<div class="text-center challenge-prompt" ng-bind-html="challengeCopy"></div>
-				<div class="options-horizontal" ng-model="challengeOptions">
-					<div ng-repeat="item in currentChallengeOptions"  class="option-text-button">
-							<a ng-click="selectedOption(item['@id'])" ng-bind-html="item['title']"/>
-					</div>
-				</div>
-			</div>
-			<div class="col-xs-2"></div>
+<div id="challenge-display" class="challenge-display">
+	<div class="challenge-padding challenge-prompt" ng-bind-html="challengeCopy"></div>
+	<div class="options-horizontal" ng-model="challengeOptions">
+		<div challenge-init ng-repeat="item in currentChallengeOptions"  class="option-text-button">
+				<a ng-click="selectedOption(item)" ng-bind-html="item['title']"/>
 		</div>
 	</div>
-</section>
+</div>
+<div id="results-circle" class="results-table display-hidden">
+	<div class="results-copy-div">RESULT
+		<div class="results-copy" ng-bind-html="optionCopy"></div>
+		<div class="results-circle-button">
+			<a ng-click="continueOption(optionId)">CONTINUE</a>
+			<div class="results-circle"></div>
+		</div>
+	</div>
+</div>
